[package]
name = "Rust-5X"
version = "0.1.0"
authors = ["aktham3210 <akthoamaaa14@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
stopwatch = "0.0.7"
serde = { version="=1.0.118", features = ["derive"] }
teloxide = "0.3"
teloxide-macros = "0.3"
log = "0.4.8"
substring = "1.4.0"
pretty_env_logger = "0.4.0"
tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
